US957002: Replace Kubernetes Java Client with caf-kuberentes-client
https://internal.almoctane.com/ui/entity-navigation?p=131002/6001&entityType=work_item&id=957002